--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,11 @@
-alabaster==0.7.12
-appdirs==1.4.4
-asn1crypto==1.4.0
-astroid==2.4.2
-attrs==20.3.0
-Babel==2.9.1
-blessed==1.17.12
-branca==0.4.2
-CacheControl==0.12.6
-cachetools==4.2.1
-caldav==0.8.0
-cffi==1.14.5
+certifi==2020.12.5
 chardet==4.0.0
-click==7.1.2
-colorama==0.4.4
-contextlib2==0.6.0.post1
-coverage==5.5
-cryptography==3.4.7
-curses-util==0.0.25
-distlib==0.3.1
-distro==1.5.0
-dnspython==1.16.0
-docopt==0.6.2
-docutils==0.16
-filelock==3.0.12
-Flask==1.1.2
-Flask-SQLAlchemy==2.5.1
-folium==0.12.1
-geographiclib==1.50
-geopy==2.1.0
-google-api-core==1.26.3
-google-auth==1.29.0
-google-cloud-speech==2.3.0
-google-cloud-texttospeech==2.3.0
-google-speech==1.1.0
-googleapis-common-protos==1.53.0
-greenlet==1.0.0
-grpcio==1.37.0
-html5lib==1.1
-icalendar==4.0.7
-idna==3.1
-imagesize==1.2.0
-isort==5.7.0
-itsdangerous==1.1.0
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
-lazy-object-proxy==1.4.3
-libcst==0.3.18
-lxml==4.6.3
-Markdown==3.3.4
-MarkupSafe==1.1.1
-mccabe==0.6.1
-msgpack==1.0.2
-mypy-extensions==0.4.3
-neovim==0.3.1
-numpy==1.20.1
-ordered-set==4.0.2
-packaging==20.9
-parso==0.8.1
-pep517==0.10.0
-Pillow==8.2.0
-playsound==1.2.2
-ply==3.11
-progress==1.5
-proto-plus==1.18.1
-protobuf==3.15.8
-pyalsa==1.1.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.11
-pybind11==2.6.2
-pycairo==1.20.0
-pycparser==2.20
-Pygments==2.8.1
-PyGObject==3.40.1
-pylint==2.6.2
-pynvim==0.4.3
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyserial==3.5
-python-dateutil==2.8.1
-python-xlib==0.29
-pytz==2021.1
-PyYAML==5.4.1
-ranger-fm==1.9.3
+click==8.0.0
+Flask==2.0.0
+idna==2.10
+itsdangerous==2.0.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
 requests==2.25.1
-resolvelib==0.5.4
-retrying==1.3.3
-rsa==4.7.2
-scikit-learn==0.24.1
-scipy==1.6.1
-screenkey==1.4
-six==1.16.0
-snowballstemmer==2.1.0
-speedtest-cli==2.1.3
-Sphinx==3.5.4
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-SQLAlchemy==1.4.15
-team==1.0
-threadpoolctl==2.1.0
-toml==0.10.2
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-tzlocal==2.1
-ueberzug==18.1.9
 urllib3==1.26.4
-virtualenv==20.4.2
-vobject==0.9.6.1
-wcwidth==0.2.5
-web-cache==1.1.0
-webencodings==0.5.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-gunicorn==20.1.0
+Werkzeug==2.0.0
